fixed calc alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+.menu * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
